--- a/01_basics_setup/homework-data/Explore HW Data.ipynb
+++ b/01_basics_setup/homework-data/Explore HW Data.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "93a1f5dc-1b8c-44d7-88bc-cd54fdb836c2",
+   "metadata": {},
+   "source": [
+    "## Initial Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6dbc1016-40c4-4dee-8db6-141487527c74",
@@ -438,6 +446,215 @@
    "source": [
     "zone_df.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba354d5-3c1a-4615-b172-475f1352ea2a",
+   "metadata": {},
+   "source": [
+    "## Testing Ingest Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fa43aa9d-9f29-4233-9eb4-4b70f25b32de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from time import time\n",
+    "\n",
+    "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cbaa389f-e367-4d65-91d5-c6f2b6a9cf30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = 'root'\n",
+    "password = 'root'\n",
+    "host = 'localhost'\n",
+    "port = '5432'\n",
+    "db_name = 'ny_taxi'\n",
+    "taxi_table_name = 'green_taxi_data'\n",
+    "zone_table_name = 'zone_data'\n",
+    "green_taxi_url = \"https://github.com/DataTalksClub/nyc-tlc-data/releases/download/green/green_tripdata_2019-10.csv.gz\"\n",
+    "zone_url = \"https://github.com/DataTalksClub/nyc-tlc-data/releases/download/misc/taxi_zone_lookup.csv\"\n",
+    "\n",
+    "green_csv_name = 'green_tripdata_2019-10.csv.gz'\n",
+    "zone_csv_name = 'taxi_zone_lookup.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "325473ed-e571-4754-a618-d85e6db3983d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.base.Connection at 0x7fd84a80c980>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine = create_engine(f\"postgresql://{user}:{password}@{host}:{port}/{db_name}\")\n",
+    "engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2457a6f3-6484-4ac6-8b8a-92912073542b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed zone table in 0.032900094985961914 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first handling the zone data\n",
+    "t_start = time()\n",
+    "\n",
+    "df_zone = pd.read_csv(zone_csv_name)\n",
+    "\n",
+    "df_zone.to_sql(name=zone_table_name, con=engine, if_exists=\"replace\")\n",
+    "\n",
+    "t_end = time()\n",
+    "\n",
+    "print(f\"Completed zone table in {t_end-t_start} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4c8d62a5-a631-4037-aee9-053efe6490e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed chunk 2 in 5.771690368652344 seconds\n",
+      "Completed chunk 3 in 5.918017625808716 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13818/3528647579.py:26: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_chunk = next(df_intake)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed chunk 4 in 6.1756110191345215 seconds\n",
+      "Completed chunk 5 in 3.767322540283203 seconds\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m n \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     25\u001b[0m t_start \u001b[38;5;241m=\u001b[39m time()\n\u001b[0;32m---> 26\u001b[0m df_chunk \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(df_intake)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m datetime_cols:\n\u001b[1;32m     29\u001b[0m     df_chunk[col] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(df_chunk[col])\n",
+      "File \u001b[0;32m~/miniconda3/envs/main/lib/python3.13/site-packages/pandas/io/parsers/readers.py:1843\u001b[0m, in \u001b[0;36mTextFileReader.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1841\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__next__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m DataFrame:\n\u001b[1;32m   1842\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1843\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_chunk()\n\u001b[1;32m   1844\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[1;32m   1845\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/miniconda3/envs/main/lib/python3.13/site-packages/pandas/io/parsers/readers.py:1985\u001b[0m, in \u001b[0;36mTextFileReader.get_chunk\u001b[0;34m(self, size)\u001b[0m\n\u001b[1;32m   1983\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m\n\u001b[1;32m   1984\u001b[0m     size \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(size, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnrows \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_currow)\n\u001b[0;32m-> 1985\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread(nrows\u001b[38;5;241m=\u001b[39msize)\n",
+      "File \u001b[0;32m~/miniconda3/envs/main/lib/python3.13/site-packages/pandas/io/parsers/readers.py:1923\u001b[0m, in \u001b[0;36mTextFileReader.read\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1916\u001b[0m nrows \u001b[38;5;241m=\u001b[39m validate_integer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnrows\u001b[39m\u001b[38;5;124m\"\u001b[39m, nrows)\n\u001b[1;32m   1917\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1918\u001b[0m     \u001b[38;5;66;03m# error: \"ParserBase\" has no attribute \"read\"\u001b[39;00m\n\u001b[1;32m   1919\u001b[0m     (\n\u001b[1;32m   1920\u001b[0m         index,\n\u001b[1;32m   1921\u001b[0m         columns,\n\u001b[1;32m   1922\u001b[0m         col_dict,\n\u001b[0;32m-> 1923\u001b[0m     ) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mread(  \u001b[38;5;66;03m# type: ignore[attr-defined]\u001b[39;00m\n\u001b[1;32m   1924\u001b[0m         nrows\n\u001b[1;32m   1925\u001b[0m     )\n\u001b[1;32m   1926\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1927\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/miniconda3/envs/main/lib/python3.13/site-packages/pandas/io/parsers/c_parser_wrapper.py:234\u001b[0m, in \u001b[0;36mCParserWrapper.read\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    233\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlow_memory:\n\u001b[0;32m--> 234\u001b[0m         chunks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reader\u001b[38;5;241m.\u001b[39mread_low_memory(nrows)\n\u001b[1;32m    235\u001b[0m         \u001b[38;5;66;03m# destructive to chunks\u001b[39;00m\n\u001b[1;32m    236\u001b[0m         data \u001b[38;5;241m=\u001b[39m _concatenate_chunks(chunks)\n",
+      "File \u001b[0;32mparsers.pyx:863\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# now reading in the green taxi trip data in 100K row chunks\n",
+    "df_intake = pd.read_csv(\n",
+    "    green_csv_name, \n",
+    "    iterator=True, \n",
+    "    chunksize=100000, \n",
+    "    compression='gzip')\n",
+    "\n",
+    "df_chunk = next(df_intake)\n",
+    "\n",
+    "datetime_cols = [c for c in df_chunk.columns if \"datetime\" in c]\n",
+    "\n",
+    "for col in datetime_cols:\n",
+    "    df_chunk[col] = pd.to_datetime(df_chunk[col])\n",
+    "\n",
+    "df_chunk.head(n=0).to_sql(name=taxi_table_name, con=engine, if_exists=\"replace\")\n",
+    "\n",
+    "df_chunk.to_sql(name=taxi_table_name, con=engine, if_exists=\"append\")\n",
+    "\n",
+    "# not the cleanest code, but what was provided from course\n",
+    "# loops through iterator chunks to insert data into database\n",
+    "\n",
+    "n = 1\n",
+    "while True:\n",
+    "    n += 1\n",
+    "    t_start = time()\n",
+    "    df_chunk = next(df_intake)\n",
+    "    \n",
+    "    for col in datetime_cols:\n",
+    "        df_chunk[col] = pd.to_datetime(df_chunk[col])\n",
+    "\n",
+    "    df_chunk.to_sql(name=taxi_table_name, con=engine, if_exists=\"append\")\n",
+    "\n",
+    "    t_end = time()\n",
+    "    print(f\"Completed chunk {n} in {t_end-t_start} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "223cb7ad-4487-4046-a2b0-586c000319a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4ec2d14-bb01-47f6-9782-e09af5fb698e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99e6a6b5-abd5-4d4a-aab2-0c3dbb25652d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d0afb14-5423-4ac7-9f9e-f480b705d978",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
